# medriskeval

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup_datasets.py
configs/: full_eval.yaml  quick_test.yaml  test_mock.yaml  vllm_azure_judge.yaml  vllm_local.yaml
medriskeval/: __init__.py
medriskeval/cli/: __init__.py  main.py  run.py  summarize.py
medriskeval/config/: __init__.py  presets.py  schema.py  yaml_config.py
medriskeval/core/: __init__.py  hashing.py  registry.py  types.py
medriskeval/datasets/: __init__.py  base.py  facts_med.py  io.py  jbb.py  msb.py  psb.py  xstest.py
medriskeval/metrics/: __init__.py  base.py  groundedness.py  refusal.py  safety.py
medriskeval/models/: __init__.py  base.py  batching.py  openai_model.py  retry.py  vllm_model.py
medriskeval/prompts/: __init__.py  base.py  chat_format.py  facts_judge.py  psb_msb.py  refusal_judge.py
medriskeval/reporting/: __init__.py  tables.py
medriskeval/runner/: __init__.py  cache.py  io.py  pipeline.py  task.py
