[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "medriskeval"
version = "0.1.0"
description = "Medical Risk Evaluation Benchmark"
requires-python = ">=3.9"
dependencies = [
    "datasets>=2.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "tqdm>=4.0.0",
]

[project.scripts]
medriskeval = "medriskeval.cli.main:main"

[tool.setuptools.packages.find]
include = ["medriskeval*"]
